--- a/nonebot_plugin_bilifan/users.yaml
+++ b/nonebot_plugin_bilifan/users.yaml
@@ -11,22 +11,22 @@ USERS:
     # 冒号后面也要有空格！冒号前面也要有空格！冒号前面也要有空格！
     # 英文冒号,英文逗号！英文逗号！英文逗号！
 CRON: 0 0 * * * # 0 0 * * *
-# 这里是 cron 表达式, 第一个参数是小时, 第二个参数是分钟
+# 这里是 cron 表达式, 第一个参数是分钟, 第二个参数是小时
 # 例如每天凌晨0点0分执行一次为 0 0 * * *
 # 如果不填,则不使用内置定时器,填写正确后要保持该进程一直运行
 
 #########以下为自定义配置#########
-ASYNC: 1 # 异步执行,默认异步执行,设置为0则同步执行,开启异步后,将不支持设置点赞CD时间
+ASYNC: 0 # 异步执行,默认异步执行,设置为0则同步执行,开启异步后,将不支持设置点赞CD时间
 
-LIKE_CD: 2 # 点赞间隔时间,单位秒,默认2秒,仅为同步时生效,设置为0则不点赞
+LIKE_CD: 7 # 点赞间隔时间,单位秒,默认2秒,仅为同步时生效,设置为0则不点赞
 
-DANMAKU_CD: 6 # 弹幕间隔时间,单位秒,默认6秒,设置为0则不发弹幕打卡,只能同步打卡
+DANMAKU_CD: 14 # 弹幕间隔时间,单位秒,默认6秒,设置为0则不发弹幕打卡,只能同步打卡
 
-WATCHINGLIVE: 65 # 每日观看直播时长，单位 min ，设置为0则关闭, 默认 65 分钟
+WATCHINGLIVE: 70 # 每日观看直播时长，单位 min ，设置为0则关闭, 默认 65 分钟
 
-WEARMEDAL: 0 # 是否弹幕打卡时自动带上当前房间的粉丝牌，避免房间有粉丝牌等级禁言，默认关闭，设置为1则开启
+WEARMEDAL: 1 # 是否弹幕打卡时自动带上当前房间的粉丝牌，避免房间有粉丝牌等级禁言，默认关闭，设置为1则开启
 
-SIGNINGROUP: 2 # 应援团签到CD时间,单位秒,默认2秒,设置为0则不签到
+SIGNINGROUP: 7 # 应援团签到CD时间,单位秒,默认2秒,设置为0则不签到
 # 说明：
 # 本项目中的异步执行指的是：同时点赞或者分享所有直播间，速度非常快，但缺点就是可能会被B站吞掉亲密度，所以建议粉丝牌较少的用户开启异步执行
 # 粉丝牌数大于30的用户建议使用同步，会更加稳定。缺点就是速度比较慢，但是可以设置点赞和分享的CD时间，避免被B站吞掉亲密度
